...
    <string name="addRoomDialogTitle">Add a Room</string>
    <string name="roomNameLabel">Room Name</string>
    <string name="leaveLabel">Leave</string>
    <string name="deleteLabel">Delete</string>
    <string name="leaveRoomDialogMessage">You will leave room %s. Do you want to continue?</string>
    <string name="deleteRoomDialogMessage">You are the admin of the room %s. Leaving this room will delete it for everyone. Do you want to continue?</string>
    <string name="chatJoinedMessage">%s has joined the room</string>
    <string name="chatLeftMessage">%s has left the room</string>
    <string name="currentUserChatJoinedMessage">You have joined the room</string>
    <string name="pencilLabel">Pencil</string>
    <string name="eraserLabel">Eraser</string>
    <string name="undoLabel">Undo</string>
    <string name="redoLabel">Redo</string>
    <string name="toggleGridLabel">Toggle Grid</string>
    <string name="cellSizeLabel">Cell Size</string>
...
    <string name="AlreadyInLobbyError">Already in lobby</string>
    <string name="UserNotInLobbyError">User not in lobby</string>
    <string name="NotEnoughPlayerError">Not enough players</string>
    <string name="UnknownError">Unknown error</string>
    <string name="UserDoesNotExistError">User does not exist</string>
    <string name="SelectDifficultyAndGameMode">Select a difficulty and a game mode</string>
    <string name="activeRoomDeletedServerMessage">This room has been deleted</string>
    <string name="notInRoomToast">You are no longer in the room</string>
    <string name="roomDoesNotExistToast">The room no longer exists</string>
    <string name="game_recap">Round Recap</string>
    <string name="next_round_starts_soon">Next Round Starts Soon…</string>
    <string name="leaveLobbyTitle">Leave the Lobby?</string>
    <string name="leaveLobbyMessage">Are you sure you want to leave the lobby?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
...
