...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_small"
    tools:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize_bigger"
        app:layout_constraintStart_toStartOf="parent"
...

    <ImageView
        android:id="@+id/avatarView"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:contentDescription="@string/avatarImageContentDescription"
        app:layout_constraintBottom_toTopOf="@id/timestampText"
        app:layout_constraintStart_toStartOf="@id/usernameText"
        app:layout_constraintTop_toBottomOf="@id/usernameText"
        tools:src="@drawable/ic_test_avatar" />

    <TextView
        android:id="@+id/messageText"
...
